// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessages > renders with assistant correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <div data-slot="leading" class="inline-flex items-center justify-center min-h-6 mt-2"><span data-slot="root" class="air-secondary-accent inline-flex items-center justify-center select-none rounded-full align-middle bg-(--ui-color-base-8) ring ring-(--ui-color-base-7) size-[32px] text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) shrink-0"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="text-(--ui-color-design-plain-content-icon-secondary) shrink-0 size-[28px]"><path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path></svg></span></div>
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with b24ui correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with class correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height) max-w-3xl" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with compact correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-3">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-1.5 pb-3">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-sm min-h-[32px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-3">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-1.5 pb-3">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-sm min-h-[32px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with content slot correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with default slot correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">Default slot
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with indicator slot correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">Indicator slot</div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with messages correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status error correctly 1`] = `
"<div data-status="error" data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status ready correctly 1`] = `
"<div data-status="ready" data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status streaming correctly 1`] = `
"<div data-status="streaming" data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status submitted correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">
        <div data-slot="indicator" class="h-6 flex items-center gap-1 py-3 *:size-2 *:rounded-full *:bg-(--ui-color-base-7) [&amp;>*:nth-child(1)]:animate-[bounce_1s_infinite] [&amp;>*:nth-child(2)]:animate-[bounce_1s_0.15s_infinite] [&amp;>*:nth-child(3)]:animate-[bounce_1s_0.3s_infinite]"><span></span><span></span><span></span></div>
      </div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with user correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <div data-slot="leading" class="inline-flex items-center justify-center min-h-6"><span data-slot="root" class="air-secondary-accent inline-flex items-center justify-center select-none rounded-full align-middle bg-(--ui-color-base-8) ring ring-(--ui-color-base-7) size-[32px] text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) shrink-0"><img src="https://github.com/bitrix24.png" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span></div>
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with viewport slot correctly 1`] = `
"<div data-slot="root" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px]">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div data-slot="container" class="relative flex items-start rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 ring-1 ring-(--ui-color-divider-vibrant-default) bg-(--ui-color-palette-white-base) text-(--ui-color-palette-black-base) ps-[14px] pe-[10px] py-[8px] rounded-md min-h-[42px] w-full">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;
